--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "hardhat-project",
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "hardhat": "^2.22.12"
+  },
   "dependencies": {
-    "@nomicfoundation/hardhat-ethers": "^3.0.4",
-    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.6",
-    "chai": "^4.3.10",
-    "dotenv": "^16.3.1",
-    "ethereum-waffle": "^4.0.10",
-    "ethers": "^6.7.1"
+    "dotenv": "^16.4.5"
   }
 }
