--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "@types/react": "18.2.25",
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4",
+    "eslint-config-next": "^13.5.4",
     "postcss": "^8",
     "tailwindcss": "^3"
   }
